# Alice_bot

./: CMakeLists.txt  README.md  improvements.md
inputFiles/: in1.txt  in2.txt  in3.txt
src/: bot.cpp  bot.h  main.cpp
tests/: main.cpp
